feat: implémentation de l'endpoint "last-metro", création de l'entité de configuration. mise à jour de l'openapi.
